--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,13 @@ dependencies = [
 [project.scripts]
 oura = "oura:main"
 
+[dependency-groups]
+dev = [
+    "ruff>=0.8",
+    "ty>=0.0.1a0",
+    "pytest>=8.0",
+]
+
 [build-system]
 requires = ["uv_build>=0.10.2,<0.11.0"]
 build-backend = "uv_build"
